Fixes episode bottom padding issue on mobile.

--- a/app/styles/_list.scss
+++ b/app/styles/_list.scss
@@ -151,7 +151,7 @@
     padding: 0.6rem 0;
     
     @include mq($medium-only) {
-        padding: 0.5rem 0 0;
+        padding: 0.5rem 0;
     }
 }
 
